fix for flags behind contents
git-svn-id: http://piwigo.org/svn/extensions/stripped_black_bloc@13212 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/theme.css
+++ b/theme.css
@@ -142,6 +142,9 @@
 .content_block {
 	z-index:999;
 }
+.menuf ul li ul {
+    z-index: 1100;
+}
 .bloc *, .bloc_big * {
     position: relative;
 }
